--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
   <li><a href="2.html">CSS</a></li>
   <li><a href="3.html">JavaScript</a></li>
 </ol>
+<p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/qXM0JdAwabU" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+</p>
 <h2>World Wide Web</h2>
-<p>The World Wide Web (abbreviated WWW or the Web) is an information space where documents and other web resources are identified by Uniform Resource Locators (URLs), 
+<p>The World Wide Web (abbreviated W WW or the Web) is an information space where documents and other web resources are identified by Uniform Resource Locators (URLs),
   interlinked by hypertext links, and can be accessed via the Internet. English scientist Tim Berners-Lee invented the World Wide Web in 1989.
   He wrote the first web browser computer program in 1990 while employed at CERN in Switzerland.
   <img src ="index.jpg" width="50%">
